--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -15,7 +15,7 @@ title = "My hobby blog"
   # copyright = "Copy, _right?_ :thinking_face:"
 
  [params.author]
-   name = "viku"
+   name = "viku:-)"
    email = "viktor.kurilla@gmail.com"
    image = "img/face_simps_style.jpeg"
    imageQuality = 96
