--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -10,22 +10,22 @@
 # overridden by providing a weight value. The menu will then be
 # ordered by weight from lowest to highest.
 
-[[main]]
-  name = "Blog"
-  pageRef = "posts"
-  weight = 10
+#[[main]]
+#  name = "Blog"
+#  pageRef = "posts"
+#  weight = 10
 
-[[main]]
-  name = "posts"
-  parent = "kategorie"
-  pageRef = "posts"
-  weight = 20
+#[[main]]
+#  name = "posts"
+#  parent = "kategorie"
+#  pageRef = "posts"
+#  weight = 20
 
-[[main]]
-  name = "videos"
-  parent = "kategorie"
-  pageRef = "videos"
-  weight = 20
+#[[main]]
+#  name = "videos"
+#  parent = "kategorie"
+#  pageRef = "videos"
+#  weight = 20
 
 #[[subnavigation]]
 #  name = "An interesting topic"
@@ -38,15 +38,15 @@
 #  pageRef = "categories/awesome"
 #  weight = 20
 
-#[[main]]
-#  name = "Categories"
-#  pageRef = "categories"
-#  weight = 20
+[[main]]
+  name = "Categories"
+  pageRef = "categories"
+  weight = 20
 
-#[[main]]
-#  name = "Tags"
-#  pageRef = "tags"
-#  weight = 30
+[[main]]
+  name = "Tags"
+  pageRef = "tags"
+  weight = 30
 
 
 # -- Footer Menu --
