--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -5,13 +5,14 @@ weight = 1
 title = "My hobby blog"
 
 [params]
+  favicon = "favicon.png"
   displayName = "EN"
   isoCode = "en"
   rtl = false
   dateFormat = "2 January 2006"
   logo = "img/logo.png"
   # secondaryLogo = "img/secondary-logo.png"
-  description = "My awesome website"
+  #description = "My awesome website"
   # copyright = "Copy, _right?_ :thinking_face:"
 
  [params.author]
